--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -17,7 +17,8 @@
     <div class="Grid Grid--full Grid--gutters">
       <div class="Grid-cell">
         <div class="element">
-          <p class="t-hello">👋🏻 hello, I'm Vicky.</p>
+          <p class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</p>
+
         </div>
       </div>
     </div>
@@ -26,14 +27,12 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters">
       <div class="Grid-cell">
-        <div class="row">
+        <div class="row heighMobileTitle">
           <div class="widthMax">
             <div class="element">
-              <strong>
-                <div class="intro aos-init aos-animate" data-aos="fade-up">
-                  <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
-                </div>
-              </strong>
+                    <h1 class="specialTextTitle"> Passionate about creating <span class="txt-type" data-wait="3000" data-words='["simple", "smooth", "engaging"]'></span> experiences.
+
+                    </h1>
             </div>
           </div>
           <div class="paddingL fitContenteft">
@@ -99,14 +98,18 @@
     </div>
 
   </div>
+  <div class="blankHXXS"></div>
+
   <div class="wrapper">
-
-
     <div class="Grid Grid--gutters Grid--cols-3">
-      <a href="/resume"> <button class="buttonLanding arrUpRight">Resume &nbsp;
-        </button></a>
-      <a href="#about"> <button class="buttonLanding arrDown">About me &nbsp;
-        </button></a>
+      <div class="element">
+        <a href="/resume"> <button class="buttonFlipLarge">Resume
+          </button></a>
+      </div>
+      <div class="element">
+        <a href="#about"> <button class="buttonFlipLarge">About me
+          </button></a>
+      </div>
     </div>
   </div>
 
@@ -296,7 +299,7 @@
 
           <div class="row centerVer">
 
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me &nbsp;
+            <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLanding">Email me &nbsp;
               </button></a>
 
             <div class="ClipboardBoxIconOnly">
@@ -343,8 +346,8 @@
                   <div class="blankHXS"></div>
 
                   <li class="progress__item progress__item--active" data-aos="fade-up">
-                    <h3> <strong>Web Implementation & 
-                      <a href="/design_system" class="textUnderline" title="Design System"> Design System Design/Update</a> </strong> </h3>
+                    <h3> <strong>Web Implementation &
+                        <a href="/design_system" class="textUnderline" title="Design System"> Design System Design/Update</a> </strong> </h3>
                     <h3>Since 2020, I have been designing, implementing, and maintaining my website. During this process, I have learned a lot, including managing a design system with HTML, CSS, JS, and EJS. I continuously improve my <a class="textUnderline" href="javascript-learning">JavaScript</a> knowledge, monitor site traffic with tools like Posthog and Google Analytics.
                     </h3>
                     <div class="blankHXS"></div>
@@ -400,9 +403,6 @@
             <div class="element">
               <h3 data-aos="fade-up"> <strong> Managing the Design Process </strong> </h3>
               <h4>Clear deadlines for each phase keep projects on track. Documenting and evaluating each iteration ensures the creation of impactful and effective designs.
-
-
-
 
 
 
