--- a/templates/shared/comp_backTop.ejs
+++ b/templates/shared/comp_backTop.ejs
@@ -5,7 +5,7 @@
         <img src="<%= websitePath %>/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
-        <h4>TOP</h4>
+        TOP
       </div>
     </div>
   </button>
