--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -10,6 +10,11 @@
 } 
 %>
 
+<% if (typeof headerBackgroundColor === 'undefined') { 
+  headerBackgroundColor = ''; 
+} 
+%>
+
 
 
 <!-- header -->
@@ -26,8 +31,8 @@
 <% if (type === 'main') { %>
 
 <header>
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
+  <nav class="header <%= headerBackgroundColor %>" id="header">
+    <div class="headerContainer">
       <a href="/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
         <ul class="nav-menu">
@@ -52,8 +57,8 @@
 
 <% } else if (type === 'back') { %>
 <header>
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
+  <nav class="header <%= headerBackgroundColor %>" id="header">
+    <div class="headerContainer">
       <a href="<%- PageUrl %>" class="marginS centerVer pointer Grid--center"> 
         <div class="arrow-container moveBackArrow">
           <div class="left-arrow <%= leftArrowColor %>"></div>
@@ -82,8 +87,8 @@
 
 <% } else if (type === 'backText') { %>
   <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
+    <nav class="header <%= headerBackgroundColor %>" id="header">
+      <div class="headerContainer">
         <a href="<%- PageUrl %>" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
             <div class="left-arrow <%= leftArrowColor %>"></div>
@@ -101,8 +106,8 @@
   </header>
   <% } else if (type === 'logoText') { %>
     <header>
-      <nav class="header" id="header">
-        <div class="backgroundColorNav">
+      <nav class="header <%= headerBackgroundColor %>" id="header">
+        <div class="headerContainer">
           <a href="/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
 
           <div class="navbar">
@@ -115,8 +120,8 @@
     
     </header>
     <% } else if (type === 'withDropdown') { %>
-      <nav class="header" id="header">
-        <div class="backgroundColorNav">
+      <nav class="header <%= headerBackgroundColor %>" id="header">
+        <div class="headerContainer">
           <a href="/"><img class="logo pointer marginS" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
           <div class="navbar">
             <ul class="nav-menu">
