--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -20,12 +20,12 @@
         sectionURL4:'/#about',
         }) %>
 
-  <%- include(`${templatePath}/shared/block_banner`, { bannerTitle:`Optimizing    Pet Service Bookings`,
+  <%- include(`${templatePath}/shared/block_banner`, { bannerTitle:`Optimizing Pet Service Bookings`,
         bannerSubTitle:`Enhancing the Consumer Booking Experience`,
         bannerLogoUrl:`${websitePath}/byp_b2c_booking/logo_BYP.svg`,
         SlideDeckUrl:`https://www.figma.com/proto/apacUjNvkG8t767EbkrxyG/Grooming---Consumer-facing?page-id=403%3A6906&node-id=403-6907&recovery=true&viewport=1341%2C1627%2C0.04&t=WKx1QQyW1B6dGhjQ-1&scaling=contain&content-scaling=fixed&starting-point-node-id=403%3A6907`,
         bannerBgColor:``, bannerMockupL:`MockupL.png`, bannerMockupM:`MockupM.png`, bannerMockupS:`MockupS.png`,
-        bannerButtonColor:`BYP` }) %>
+        bannerButtonColor:`colorBgBYPOrange100` }) %>
 
   <!-- timeline -->
   <div class="wrapper">
