--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -115,11 +115,11 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="element">
-        <a href="/resume"> <button class="buttonFlipLarge">Resume
+        <a href="/resume"> <button class="buttonFlipLarge bgVWGrey">Resume
           </button></a>
       </div>
       <div class="element">
-        <a href="#about"> <button class="buttonFlipLarge">About me
+        <a href="#about"> <button class="buttonFlipLarge bgVWGrey">About me
           </button></a>
       </div>
     </div>
