--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -10,10 +10,8 @@
   <%- include( `${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header_back`, { 
         PageUrl:`${websitePath}/`,
-        headerBackgroundColor:`colorBgBYPOrange100`,
         leftArrowColor:``,
-
-        hamburgerMenuBgColor:`colorBgBYPOrange100`,
+        headerBackgroundColor:`colorBgBYPOrange100`,
         sectionURL1:'/#projects', 
         sectionURL2:'/#experiments', 
         sectionURL3:'/#design_system', 
@@ -24,7 +22,10 @@
         bannerSubTitle:`Enhancing the Consumer Booking Experience`,
         bannerLogoUrl:`${websitePath}/byp_b2c_booking/logo_BYP.svg`,
         SlideDeckUrl:`https://www.figma.com/proto/apacUjNvkG8t767EbkrxyG/Grooming---Consumer-facing?page-id=403%3A6906&node-id=403-6907&recovery=true&viewport=1341%2C1627%2C0.04&t=WKx1QQyW1B6dGhjQ-1&scaling=contain&content-scaling=fixed&starting-point-node-id=403%3A6907`,
-        bannerBgColor:``, bannerMockupL:`MockupL.png`, bannerMockupM:`MockupM.png`, bannerMockupS:`MockupS.png`,
+        bannerBgColor:``, 
+        bannerMockupL:`MockupL.png`, 
+        bannerMockupM:`MockupM.png`, 
+        bannerMockupS:`MockupS.png`,
         bannerButtonColor:`colorBgBYPOrange100` }) %>
 
   <!-- timeline -->
