--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -16,7 +16,7 @@
     sectionURL4:'#about',
 
     headerBackgroundColor:'bgVWGrey',
-    hamburgerMenuBgColor:'colorBgVW'
+    headerBackgroundColor:'colorBgVW'
     }) %>
 
   <div class="blankHM"></div>
