--- a/templates/shared/block_nav_header_main.ejs
+++ b/templates/shared/block_nav_header_main.ejs
@@ -10,7 +10,7 @@ if (typeof headerBackgroundColor === 'undefined') {
     <div class="headerContainer">
       <a href="/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
       <div class="navbar">
-        <ol class="nav-menu <%= hamburgerMenuBgColor %>">
+        <ol class="nav-menu <%= headerBackgroundColor %>">
           <li class="nav-item active activeNav box">
             <a href="<%- sectionURL1 %>" class="nav-link">PROJECTS</a>
           </li>
