--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -16,7 +16,7 @@
   
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:`APPOINTA`,
+    arrTxtColor:`APPOINTA`,
     currentPage: 'PROJECT',
     PageUrl:`/`
     }) %>
