--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -12,7 +12,7 @@
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:``,
+    arrTxtColor:``,
     currentPage: 'ARCHITECTURE',
     PageUrl:`/`
     }) %>
