--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -12,7 +12,7 @@
 
   <%- include(`${templatePath}/shared/block_nav_header`, { 
     type:'logoText', 
-    leftArrowColor:``,
+    arrTxtColor:``,
     currentPage: '', 
     PageUrl:'/worksamples/BYP_LH_wsbeebr' }) %>
 
