--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -11,7 +11,7 @@
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:``,
+    arrTxtColor:``,
     currentPage: 'PHOTOGRAPHY',
     PageUrl:`/`
     }) %>  <div class="blankHM"></div>
