--- a/templates/refining_rx_zero/index.ejs
+++ b/templates/refining_rx_zero/index.ejs
@@ -8,7 +8,7 @@
 
 <body class="LASO">
   <%- include(`${templatePath}/shared/compProgressBar`,{ barColor:`LASO` }) %>
-  <%- include(`${templatePath}/shared/block_nav_header`, { type:'backText', leftArrowColor:`LASO`,
+  <%- include(`${templatePath}/shared/block_nav_header`, { type:'backText', arrTxtColor:`LASO`,
         currentPage: 'PROJECT' , PageUrl:'/' }) %>
 
   <%- include(`${templatePath}/shared/block_banner`, { bannerTitle:`The Evolution of LASO Local & Telehealth to RX
