--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -12,7 +12,7 @@
 
   <%- include(`${templatePath}/shared/block_nav_header_back`, { 
     PageUrl:`${websitePath}/`,
-    leftArrowColor:``,
+    arrTxtColor:``,
     headerBackgroundColor:`colorBgVW`,
     sectionURL1:'/#projects', 
     sectionURL2:'/#experiments', 
