--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -16,7 +16,7 @@
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:`SEER`,
+    arrTxtColor:`SEER`,
 
     currentPage: 'PROJECT',
     PageUrl:`/`
