--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -1,6 +1,6 @@
 
-<% if (typeof leftArrowColor === 'undefined') { 
-  leftArrowColor = ''; 
+<% if (typeof arrTxtColor === 'undefined') { 
+  arrTxtColor = ''; 
 } 
 %>
 
@@ -61,7 +61,7 @@
     <div class="headerContainer">
       <a href="<%- PageUrl %>" class="marginS centerVer pointer Grid--center"> 
         <div class="arrow-container moveBackArrow">
-          <div class="left-arrow <%= leftArrowColor %>"></div>
+          <div class="left-arrow <%= arrTxtColor %>"></div>
        </div>
        <h4 class="backText">BACK</h4>
       </a>
@@ -91,7 +91,7 @@
       <div class="headerContainer">
         <a href="<%- PageUrl %>" class="marginS centerVer pointer Grid--center"> 
           <div class="arrow-container moveBackArrow">
-            <div class="left-arrow <%= leftArrowColor %>"></div>
+            <div class="left-arrow <%= arrTxtColor %>"></div>
          </div>
          <h4 class="backText">BACK</h4>
         </a>
