--- a/templates/shared/comp_textualElements_title.ejs
+++ b/templates/shared/comp_textualElements_title.ejs
@@ -3,7 +3,7 @@
   } 
   %>
   <% if (typeof titleColor === 'undefined') { 
-    titleColor = 'GreyBg900'; 
+    titleColor = 'Grey900'; 
   } 
   %>
   <% if (typeof titleFontSize === 'undefined') { 
