--- a/templates/architecture/the_rotation_of_curves/index.ejs
+++ b/templates/architecture/the_rotation_of_curves/index.ejs
@@ -11,7 +11,7 @@
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:``,
+    arrTxtColor:``,
     currentPage: 'ARCHITECTURE',
     PageUrl:`/architecture`
     }) %>
