--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -16,7 +16,7 @@
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
-    leftArrowColor:`GLORIFY`,
+    arrTxtColor:`GLORIFY`,
     currentPage: 'PROJECT',
     PageUrl:`/`
     }) %>
